--- a/limpeza_dados.ipynb
+++ b/limpeza_dados.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -397,14 +397,75 @@
        "[5 rows x 585 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "### Importando dados\n",
     "df = pd.read_excel('Retornos_diarios.xlsx', index_col=0, parse_dates=True, skiprows=3)\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def columns(df): #renomeando colunas com as ações\n",
+    "    df.columns = df.columns.str[59:]\n",
+    "columns(df)\n",
+    "df.replace('-', np.nan, inplace=True) #substituindo valores ausentes no dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_num = {}\n",
+    "for col in df.columns:\n",
+    "    df_num[col] = df[col].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count_nan_in_df = df.isnull().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    491\n",
+      "    524\n",
+      "    524\n",
+      "     28\n",
+      "    272\n",
+      "   ... \n",
+      "     28\n",
+      "    394\n",
+      "     89\n",
+      "    524\n",
+      "     28\n",
+      "Length: 585, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(count_nan_in_df)"
    ]
   },
   {
