--- a/limpeza_dados.ipynb
+++ b/limpeza_dados.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
        "[5 rows x 585 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,50 +422,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_num = {}\n",
-    "for col in df.columns:\n",
-    "    df_num[col] = df[col].isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "count_nan_in_df = df.isnull().sum()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    491\n",
-      "    524\n",
-      "    524\n",
-      "     28\n",
-      "    272\n",
-      "   ... \n",
-      "     28\n",
-      "    394\n",
-      "     89\n",
-      "    524\n",
-      "     28\n",
-      "Length: 585, dtype: int64\n"
-     ]
+     "data": {
+      "text/plain": [
+       "209"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(count_nan_in_df)"
+    "nul_values = df.isnull().sum().sort_values() #calculando valores nulos\n",
+    "stocks = pd.Series(nul_values).where(lambda x: x==nul_values.min()).dropna() #selecionando ações que não possuem valores nulos\n",
+    "stocks.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['YDUQ3', 'CYRE3', 'DXCO3', 'DIRR3', 'RCSL4', 'DMMO3', 'RAPT4',\n",
+       "       'ECOR3', 'ELET3', 'RADL3', 'ELET6', 'QUAL3', 'EMBR3', 'ENAT3',\n",
+       "       'PFRM3', 'CVCB3', 'ENBR3', 'ENGI4', 'ENGI11', 'ENEV3', 'EGIE3',\n",
+       "       'PPLA11', 'POSI3', 'PTBL3', 'PSSA3', 'EQPA3', 'EQTL3', 'ETER3',\n",
+       "       'EUCA4', 'EVEN3', 'PINE4', 'ENGI3', 'EZTC3', 'CARD3', 'RSID3',\n",
+       "       'SGPS3', 'SLCE3', 'CMIG3', 'CMIG4', 'CESP6', 'CIEL3', 'SQIA3',\n",
+       "       'SIMH3', 'CSNA3', 'SEER3', 'SHUL4', 'SLED4', 'SMTO3', 'COGN3',\n",
+       "       'CRPG5', 'SCAR3', 'SANB11', 'SANB4', 'SANB3', 'CSMG3', 'CPLE3',\n",
+       "       'CPLE6', 'SAPR11', 'SAPR4', 'SAPR3', 'CSAN3', 'SBSP3', 'RAIL3',\n",
+       "       'CTNM4', 'POMO4', 'STBP3', 'SULA11', 'FHER3', 'FLRY3', 'MYPK3',\n",
+       "       'IRBR3', 'ITSA3', 'ITSA4', 'ITUB3', 'ITUB4', 'JBSS3', 'JHSF3',\n",
+       "       'BEEF3', 'KEPL3', 'KLBN3', 'KLBN4', 'KLBN11', 'MILS3', 'MOVI3',\n",
+       "       'MTSA4', 'LLIS3', 'LIGT3', 'RENT3', 'LCAM3', 'LOGG3', 'LOGN3',\n",
+       "       'AMAR3', 'LREN3', 'LPSB3', 'LUPA3', 'MDIA3', 'BMEB4', 'MGLU3',\n",
+       "       'POMO3', 'LEVE3', 'FESA4', 'MRVE3', 'INEP4', 'FRAS3', 'GFSA3',\n",
+       "       'PRIO3', 'GGBR3', 'GGBR4', 'GOAU3', 'GOAU4', 'PETR4', 'PETR3',\n",
+       "       'PDGR3', 'PMAM3', 'GOLL4', 'CGRA4', 'GRND3', 'MULT3', 'NTCO3',\n",
+       "       'PDTC3', 'HAPV3', 'HBOR3', 'OFSA3', 'MEGA3', 'OIBR4', 'HYPE3',\n",
+       "       'IGBR3', 'OIBR3', 'IGTI3', 'ODPV3', 'PARD3', 'MEAL3', 'ROMI3',\n",
+       "       'GUAR3', 'SUZB3', 'CPFE3', 'BEES3', 'AZUL4', 'B3SA3', 'BIDI4',\n",
+       "       'BPAN4', 'UCAS3', 'UGPA3', 'TUPY3', 'BRSR6', 'TPIS3', 'TRIS3',\n",
+       "       'BBSE3', 'TRPL4', 'BKBR3', 'TOTS3', 'SHOW3', 'TIMS3', 'BOBR4',\n",
+       "       'BBRK3', 'BRML3', 'BRPR3', 'BBDC3', 'BBDC4', 'BRAP3', 'AZEV4',\n",
+       "       'UNIP3', 'ATOM3', 'ATMP3', 'ABCB4', 'EALT4', 'WIZS3', 'AESB3',\n",
+       "       'PORT3', 'WEGE3', 'VULC3', 'VIVR3', 'ALSO3', 'VBBR3', 'VIIA3',\n",
+       "       'BRAP4', 'VLID3', 'AALR3', 'USIM5', 'ALPA4', 'APER3', 'USIM3',\n",
+       "       'ALUP11', 'ABEV3', 'AMER3', 'ANIM3', 'ARZZ3', 'UNIP6', 'VALE3',\n",
+       "       'LAND3', 'MRFG3', 'TCSA3', 'BPAC11', 'TAEE11', 'TGMA3', 'CAML3',\n",
+       "       'BBAS3', 'BRFS3', 'CRFB3', 'VIVT3', 'TAEE3', 'TECN3', 'TEND3',\n",
+       "       'BRKM5', 'CCRO3', 'TAEE4', 'TASA3', 'AGRO3', 'TASA4'], dtype=object)"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stocks.index.values #ações que serão utilizadas"
    ]
   },
   {
